# setu-swap

./: .gitmodules  README.md
ethereum/: foundry.toml
ethereum/script/: Deploy.s.sol  DeployEscrowFactory.s.sol  DeployResolver.s.sol  GenerateAccounts.s.sol  README.md  TokenManager.s.sol
ethereum/src/: BaseEscrow.sol  BaseEscrowFactory.sol  Escrow.sol  EscrowDst.sol  EscrowFactory.sol  EscrowSrc.sol  MerkleStorageInvalidator.sol  MinimalBaseEscrow.sol  MinimalEscrow.sol  MinimalEscrowDst.sol  MinimalEscrowFactory.sol  MinimalEscrowSrc.sol  Resolver.sol  ResolverValidationExtension.sol
ethereum/src/interfaces/: IBaseEscrow.sol  IEscrow.sol  IEscrowFactory.sol  IResolverExample.sol
ethereum/src/libraries/: ImmutablesLib.sol
ethereum/src/mocks/: NoReceiveCaller.sol  ResolverExample.sol
ethereum/src/tokens/: 1inch.sol  Aave.sol  AccessToken.sol  MemeToken.sol  StableToken.sol  USDC.sol  WrappedEthereum.sol
ethereum/test/: MinimalEscrowFactory.t.sol
ethereum/test/mocks/: MockToken.sol
main/: create_order.js  ethereum_to_stellar.js  list_orders.js  package-lock.json  package.json  stellarTokenBalances.js
main/core/: ethereum_to_stellar.js  oneinch_utils.js
main/db/: orderService.js
main/maker/: create_order.js
main/prisma/: schema.prisma
main/taker/: checkOrders.js  fillOrder.js
relayer/: .gitignore  package-lock.json  package.json  tailwind.config.js
relayer/config/: whitelist.ts
relayer/scripts/: eventListener.ts
stellar/: .env  Cargo.toml  main.js
stellar/contracts/access_token/: Cargo.toml
stellar/contracts/access_token/src/: admin.rs
(+53 files in other folders)
