[package]
name = "soroban-token-contract"
description = "Soroban standard token contract"
version = "0.0.6"
edition = "2021"
rust-version = "1.80.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "22.0.7" }
soroban-token-sdk = { version = "22.0.1" }

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }

